--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <button onclick="tambahBarang()">Tambah</button>
   <button onclick="barangMasuk()">Barang Masuk</button>
   <button onclick="barangKeluar()">Barang Keluar</button>
+  <button onclick="downloadCSV()">Ekspor ke Excel</button>
   <table id="tabelStok">
   <thead>
     <tr>
